[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/stats_bar/stats_bar.gd" type="Script" id=1]

[node name="TopContainer" type="MarginContainer"]
anchor_right = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 18.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 476.0
margin_bottom = 16.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
margin_left = 4.0
margin_top = -0.420448
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftContainer" type="HBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 4.0
margin_top = -9.0
margin_right = 131.0
margin_bottom = 9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WoodCounter" type="Label" parent="Panel/LeftContainer"]
margin_top = 2.0
margin_right = 64.0
margin_bottom = 16.0
text = "Wood: %s"
valign = 1
percent_visible = -0.142857

[node name="StoneCounter" type="Label" parent="Panel/LeftContainer"]
margin_left = 68.0
margin_top = 2.0
margin_right = 131.0
margin_bottom = 16.0
text = "Stone: %s"
align = 1

[node name="RightContainer" type="HBoxContainer" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -9.0
margin_right = -4.0
margin_bottom = 9.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DayCounter" type="Label" parent="Panel/RightContainer"]
margin_top = 2.0
margin_right = 51.0
margin_bottom = 16.0
text = "Day: %s"
valign = 1
